# pyjournal

./: Dockerfile  README.md  main.py  pyjournal.toml  pyproject.toml  settings.py  template.html
