[tool.poetry]
name = "pyjournal"
version = "0.1.0"
description = ""
authors = ["Enzo Lebrun <enzo.the@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
